heimdall/heimdall-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: heimdall
  replicas: 1
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - name: heimdall
          image: linuxserver/heimdall:2.5.8
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: heimdall-volume
              mountPath: /config
      volumes:
        - name: heimdall-volume
          hostPath:
            path: /heimdall
            type: Directory
