heimdall/heimdall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-service
  namespace: default
  labels:
    app: heimdall
spec:
  selector:
    app: heimdall
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30120
